--- a/base_dj/discs/song_settings.tmpl
+++ b/base_dj/discs/song_settings.tmpl
@@ -1,9 +1,18 @@
+{% for company in companies %}
 @anthem.log
-def {{ song.name }}(ctx):
-    """ Setup {{ song.model_id.model }} """
+def {{ song.name }}{% if multicompany %}_{{ company.aka }}{% endif %}(ctx):
+    """ Setup {{ song.model_id.model }}{% if multicompany %} for {{ company.name }}{% endif %} """
     model = ctx.env['{{ song.model_id.model }}'].with_context({{ song.model_context }})
     model.create({
-        {% for key, value in song.dj_get_settings_vals().iteritems() %}# {{ value['label'] }}  # noqa
+        {% for key, value in song.dj_get_settings_vals(company=company).iteritems() %}# {{ value['label'] }}  # noqa
         '{{ key }}': {{ value['val'] }},
         {% endfor %}
     }).execute()
+{% endfor %}
+
+{% if multicompany %}
+@anthem.log
+def account_config(ctx):
+    {% for company in companies %}{{ song.name }}_{{ company.aka }}(ctx)
+    {% endfor %}
+{% endif %}
