--- a/base_dj/discs/song_settings.tmpl
+++ b/base_dj/discs/song_settings.tmpl
@@ -1,18 +1,19 @@
-{% for company in companies %}
+{% set settings_vals = song.dj_get_settings_vals() %}
+{% for song_name, company_name, values in settings_vals %}
 @anthem.log
-def {{ song.name }}{% if is_company_settings %}_{{ company.aka }}{% endif %}(ctx):
-    """ Setup {{ song.model_id.model }}{% if is_company_settings %} for {{ company.name }}{% endif %} """
+def {{ song_name }}(ctx):
+    """ Setup {{ song.model_id.model }} for {{ company_name }} """
     model = ctx.env['{{ song.model_id.model }}'].with_context({{ song.model_context }})
     model.create({
-        {% for key, value in song.dj_get_settings_vals(company=company).iteritems() %}# {{ value['label'] }}  # noqa
+        {% for key, value in values.iteritems() %}# {{ value['label'] }}  # noqa
         '{{ key }}': {{ value['val'] }},
         {% endfor %}
     }).execute()
 {% endfor %}
 
-{% if is_company_settings %}
+{% if settings_vals|length > 1 %}
 @anthem.log
-def account_config(ctx):
-    {% for company in companies %}{{ song.name }}_{{ company.aka }}(ctx)
+def {{ song.name }}(ctx):
+    {% for song_name, company_name, values in settings_vals %}{{ song_name }}(ctx)
     {% endfor %}
 {% endif %}
